--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
    <body>
       <!-- Barra de Navegación -->
       <header>
-         <nav class="nav">
+         <nav class="navegacion">
             <a href="./index.html"><img src="./svg/logoTapas.svg" alt='logos'/></a>
             <div>
                <input type="text" placeholder="🔎 Buscar...">
                <ul class="nav-list" id="menu">
-                  <li class="dropdown" id="acceso">
+                  <li class="drop" id="acceso">
                      <a href="#">Acceder</a>
-                     <ul class="dropdown-menu">
+                     <ul class="drop-menu">
                         <li><a href="./login.html">Loguearse</a></li>
                         <li><a href="#">Registrarse</a></li>
                      </ul>
                   </li>
 
-                  <li class="dropdown" id="userIdentificado">
+                  <li class="drop" id="userIdentificado">
                      <a href="#" id="identificador"></a>
-                     <ul class="dropdown-menu">
+                     <ul class="drop-menu">
                         <li><a href="#" id="insertar">Insertar Tapa</a></li>
                         <li><a href="#" id="logOut">Cerrar sesion</a></li>
                      </ul>
@@ -36,18 +36,18 @@
                   <li><a href="#tapas">Tapas</a></li>
                   <li><a href="#contact">Contacto</a></li>
                </ul>
-               <ul class="dropdown" id="hamburguesa">
+               <ul class="drop" id="hamburguesa">
                   <hr>
                   <hr>
                   <hr>
                   <ul class="nav-list">
-                     <li class="dropdown">
-                     <ul class="dropdown-menu">
+                     <!-- <li class="drop"> -->
+                     <ul class="drop-menu">
                         <li><a href="#">Loguearse</a></li>
                         <li><a href="#">Registrarse</a></li>
-                        <li><a href="#">Buscar</a></li>
                         <li><a href="#tapas">Tapas</a></li>
                         <li><a href="#contact">Contacto</a></li>
+                     </ul>
                   </ul>
                </div>
             </div>
