--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
          <div id="formInsertar">
             <form action="" method="post" id="formulario">
                <h2 id="titulo">Insertar Tapas</h2>
-               <label for="nomber">Nombre del Bar:</label>
-               <input type="text" id="nombreBar" class="nombreBar" name="nombreBar" required>
+               <label for="nombreBar">Nombre del Bar:</label>
+               <input type="text" id="nombreBar" class="nombreBar" name="nombreBar">
                <label for="nombreTapa">Nombre Tapa:</label>
-               <input type="text" id="nombreTapa" class="nombreTapa" name="nombreTapa" required>
+               <input type="text" id="nombreTapa" class="nombreTapa" name="nombreTapa">
                <label for="imagen">Imagen de la Tapa:</label>
                <select name="imagen" id="imagen">
                   <option value="" selected disabled>--Seleccione una opcion--</option>
