--- a/login.html
+++ b/login.html
@@ -21,6 +21,7 @@
         <input type="text" name="user" id="user">
         <label for="contraseña">Contraseña:</label>
         <input type="password" name="contraseña" id="pass">
+        <p class="error">El usuario o la contraseña no coinciden</p>
         <input type="submit">
         <a href="#">¿Has olvidado los datos de tu cuenta?</a>
         <a href="registro.html">Registrate</a>
